--- a/etc/samba/smb.conf
+++ b/etc/samba/smb.conf
@@ -4,8 +4,16 @@
 # you modified it.
 
 [global]
-	workgroup = SAMBA
+	workgroup = JGWILLGROUP
+netbios name = LIN
+
 	security = user
+unix charset = UTF-8
+interfaces = lo eth0 192.168.0.41/24
+
+hosts allow = 127. 10.0.0. 192.168.0.
+map to guest = Bad User
+max protocol = SMB2
 
 	passdb backend = tdbsam
 
@@ -14,6 +22,21 @@
 	load printers = yes
 	cups options = raw
 
+[Share]
+ # shared directory
+    path = /home/share
+    # writable
+    writable = yes
+    # allow guest user
+    guest ok = yes
+    # guest only
+    guest only = yes
+    # fully accessed
+    create mode = 0777
+    # fully accessed
+    directory mode = 0777
+
+
 [homes]
 	comment = Home Directories
 	valid users = %S, %D%w%S
@@ -21,17 +44,4 @@
 	read only = No
 	inherit acls = Yes
 
-[printers]
-	comment = All Printers
-	path = /var/tmp
-	printable = Yes
-	create mask = 0600
-	browseable = No
 
-[print$]
-	comment = Printer Drivers
-	path = /var/lib/samba/drivers
-	write list = @printadmin root
-	force group = @printadmin
-	create mask = 0664
-	directory mask = 0775
